--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -11,15 +11,23 @@
     }
 
     section#login > div#imagem {
-        float: left;
+        float: right;
         width: 30%;
         height: 100%;
     }
 
     section#login > div#formulario {
-        float: right;
+        float: left;
         width: 67%;
     }
+
+    div#formulario > h1 {
+        font-size: 1.5em;
+    }
+
+    div#formulario > p {
+        font-size: 1em;
+}
 }
 
 @media screen and (min-width: 992px) {
@@ -34,13 +42,21 @@
     }
 
     section#login > div#imagem {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     section#login > div#formulario {
-        float: right;
+        float: left;
         width: 47%;
     }
+
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+
+    div#formulario > p {
+        font-size: 1.2em;
+}
 }
