--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -8,6 +8,7 @@
     
     section#login {
         width: 90vw;
+        height: 280px;
     }
 
     section#login > div#imagem {
@@ -38,7 +39,7 @@
 
     section#login {
         width: 950px;
-
+        height: 330px;
     }
 
     section#login > div#imagem {
@@ -57,6 +58,6 @@
     }
 
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1em;
 }
 }
