--- a/estilos/style.css
+++ b/estilos/style.css
@@ -28,20 +28,19 @@ main {
     width: 100vw;
 }
 
-
 section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
 
     background-color: #F3F3EB;
-    width: 250px;
+    width: 260px;
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.445);
-
+    
+    transform: translate(-50%, -50%);
     transition: width 0.3s, height 0.3s;
     transition-timing-function: ease;
 }
@@ -58,7 +57,6 @@ section#login > div#formulario {
     padding: 10px;
 }
 
-
 div#formulario > h1 {
     text-align: center;
     margin-bottom: 10px;
@@ -66,4 +64,64 @@ div#formulario > h1 {
 
 div#formulario > p {
     font-size: 0.8em;
+}
+
+form > div.campo {
+    background-color: #F3F3EB;
+    color: #C0091E;
+    display: block;
+    width: 100%;
+    height: 38px;
+    border-radius: 8px;
+    margin: 5px 0px;
+}
+
+div.campo > label {
+    display: none;
+}
+
+div.campo > span {
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color: #F3F3EB;
+    font-size: 1em;
+    width: calc(100% - 57px);
+    height: 90%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 1px;
+    transform: translateY(-10px);
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #C0091E;
+    color: #F3F3EB;
+    border-radius: 7px; 
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: #6d0612;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    color: #C0091E;
+    text-decoration: none;
+}
+
+form > a.botao:hover {
+    color: #6d0612;
 }
